// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps has login 1`] = `
Promise {
  "_U": 0,
  "_V": 1,
  "_W": Object {
    "meta": Object {
      "email": "name",
    },
    "payload": Object {
      "api": Object {
        "method": "post",
        "params": Object {
          "email": "name",
          "password": "pass",
        },
        "path": "/noo/login",
      },
    },
    "type": "LOGIN",
  },
  "_X": null,
}
`;

exports[`mapDispatchToProps has loginWithFacebook 1`] = `
Promise {
  "_U": 0,
  "_V": 1,
  "_W": Object {
    "payload": Object {
      "api": Object {
        "method": "post",
        "path": "/noo/login/facebook-token/oauth?access_token=token",
      },
    },
    "type": "LOGIN_WITH_FACEBOOK",
  },
  "_X": null,
}
`;

exports[`mapDispatchToProps has loginWithGoogle 1`] = `
Promise {
  "_U": 0,
  "_V": 1,
  "_W": Object {
    "payload": Object {
      "api": Object {
        "method": "post",
        "path": "/noo/login/google-token/oauth?access_token=token",
      },
    },
    "type": "LOGIN_WITH_GOOGLE",
  },
  "_X": null,
}
`;

exports[`mergeProps adds finishLogin 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "api": Object {
          "method": "post",
          "path": "/noo/login/facebook-token/oauth?access_token=token",
        },
      },
      "type": "LOGIN_WITH_FACEBOOK",
    },
  ],
]
`;
